# TAMPL5

./: CMakeLists.txt  CMakeLists.txt.save  README.md
.github/workflows/: ci.yml  ci.yml.save
banking/: Account.h  CMakeLists.txt  Transaction.cpp  Transaction.h
src/: .Account.h.swp  Account.h  Transaction.h
test/: AccountTest.cpp  CMakeLists.txt  MockAccount.cpp  TransactionTest.cpp
test/mock/: .MockAccount.h.swp  MockAccount.cpp  MockAccount.h
